--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.2",
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "vite-tsconfig-paths": "^4.2.0",
@@ -32,6 +33,7 @@
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
     "@types/react": "^18.0.37",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
